fix table hover

--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -24,7 +24,7 @@
 			</div>      
 		</div>
 	</form>
-	<table id="managerpost" class="map-detail table table-striped table-bordered">
+	<table id="managerpost" class="table table-hover table-bordered">
 		<thead>
 			<tr>
 				<th colspan="3">
