fix search controller

--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -119,11 +119,11 @@
 							<!-- <div id="slider-range"></div> -->
                             <div class="form-group">
                                 <label for="start">Từ:</label>
-                                <input type="number" class="form-control" ng-model="searchContent.startNDT" ng-change="ndtChange()" id="startTGTM" placeholder="1000" name="startTGTM">
+                                <input type="number" class="form-control" ng-model="startYearNDT" ng-change="ndtChange()" id="startTGTM" placeholder="1000" name="startTGTM">
                             </div>
                             <div class="form-group">
                                 <label for="stop">đến:</label>
-                                <input type="number" class="form-control" ng-model="searchContent.stopNDT" ng-change="ndtChange()" id="stopTGTM" placeholder="2017" name="stopTGTM">
+                                <input type="number" class="form-control" ng-model="stopYearNDT" ng-change="ndtChange()" id="stopTGTM" placeholder="2017" name="stopTGTM">
                             </div>
                             <!-- <button type="submit" class="btn btn-default">Tìm kiếm</button> -->
 							<!-- <rzslider rz-slider-model="minRangeSlider.minValue" rz-slider-high="minRangeSlider.maxValue" ng-model="searchContent.ngayDinhTen" ng-change="yearChange()" rz-slider-options="minRangeSlider.options"></rzslider> -->
@@ -225,11 +225,11 @@
 							<!-- <input type="text" placeholder="Tìm kiếm" name="" ng-model="searchContent.thoiGianThuMau" class="input-form-search"> -->
 							<div class="form-group">
                                 <label for="start">Từ:</label>
-                                <input type="number" class="form-control" ng-model="searchContent.startTGTM" ng-change="tgtmChange()" id="startTGTM" placeholder="1000" name="startTGTM">
+                                <input type="number" class="form-control" ng-model="startYearTGTM" ng-change="tgtmChange()" id="startTGTM" placeholder="1000" name="startTGTM">
                             </div>
                             <div class="form-group">
                                 <label for="stop">đến:</label>
-                                <input type="number" class="form-control" ng-model="searchContent.stopTGTM" ng-change="tgtmChange()" id="stopTGTM" placeholder="2017" name="stopTGTM">
+                                <input type="number" class="form-control" ng-model="stopYearTGTM" ng-change="tgtmChange()" id="stopTGTM" placeholder="2017" name="stopTGTM">
                             </div>
 						</form>
 					</div>
