--- a/app/views/templates/home.template.html
+++ b/app/views/templates/home.template.html
@@ -32,7 +32,7 @@
         <div ng-repeat="img in images" class="col-md-3 col-sm-6 col-xs-12">
             <div class="thumbnail">
                 <a ng-href="{{img.url + '?display=html'}}" title="{{img.caption}}">
-                    <img ng-src="{{'http://baotangvn.online:8888' + img.imgUrl + '?dim=290'}}" alt="{{img.caption}}" class="img">
+                    <img ng-src="{{img.imgUrl + '?dim=290'}}" alt="{{img.caption}}" class="img">
                 </a>
                 <div class="caption">
                     <p>{{img.caption}}</p>
