--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -2,6 +2,7 @@
 	<form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
 		<input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
 		<input type="hidden" name="sample" value="tho-nhuong" id="sample">
+		<input type="hidden" name="fLoadFromXLSX" value="0" id="fLoadFromXLSX">
 		<center><h3>Thêm mẫu dữ liệu thổ nhưỡng > Đề tài: {{maDeTai}}</h3></center>
 		<div class="container-fluid">
 			<ul class="nav nav-tabs group tabs">
