--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -25,11 +25,11 @@
 			  	<div id="collapse1" class="collapse1 panel-collapse collapse">
 					<div class="panel-body">
 						<form ng-submit="searchSample()">
-							<input type="checkbox" name="model" id="cosinh" ng-click="sampleClick('Cổ sinh', 'cosinh')" ng-model="searchContent.cosinh" value="co-sinh"> Cổ sinh<br>
-							<input type="checkbox" name="model" id="diachat" ng-click="sampleClick('Địa chất', 'diachat')" ng-model="searchContent.diachat" value="dia-chat"> Địa chất<br>
-							<input type="checkbox" name="model" id="dongvat" ng-click="sampleClick('Động vật', 'dongvat')" ng-model="searchContent.dongvat" value="dong-vat"> Động vật<br>
-							<input type="checkbox" name="model" id="thonhuong" ng-click="sampleClick('Thổ nhưỡng', 'thonhuong')" ng-model="searchContent.thonhuong" value="tho-nhuong"> Thổ nhưỡng<br>
-							<input type="checkbox" name="model" id="thucvat" ng-click="sampleClick('Thực vật', 'thucvat')" ng-model="searchContent.thucvat" value="thuc-vat"> Thực vật<br>
+							<input type="checkbox" name="model" id="cosinh" ng-click="sampleClick('Cổ sinh')" ng-model="searchSample.cosinh" value="co-sinh"> Cổ sinh<br>
+							<input type="checkbox" name="model" id="diachat" ng-click="sampleClick('Địa chất')" ng-model="searchSample.diachat" value="dia-chat"> Địa chất<br>
+							<input type="checkbox" name="model" id="dongvat" ng-click="sampleClick('Động vật')" ng-model="searchSample.dongvat" value="dong-vat"> Động vật<br>
+							<input type="checkbox" name="model" id="thonhuong" ng-click="sampleClick('Thổ nhưỡng')" ng-model="searchSample.thonhuong" value="tho-nhuong"> Thổ nhưỡng<br>
+							<input type="checkbox" name="model" id="thucvat" ng-click="sampleClick('Thực vật')" ng-model="searchSample.thucvat" value="thuc-vat"> Thực vật<br>
 						</form>
 					</div>
 			  	</div>
@@ -216,7 +216,7 @@
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
 					<h4 class="panel-title">
-				  		<a data-toggle="collapse" data-parent="#accordion13" href=".collapse13">Thời gian thu mẫu</a>
+				  		<a data-toggle="collapse" data-parent="#accordion13" href=".collapse13">Năm thu mẫu</a>
 					</h4>
 			  	</div>
 			  	<div id="collapse13" class="collapse13 panel-collapse collapse">
@@ -352,7 +352,7 @@
 				<col width="130">
 				<col width="130">
 				<col width="130">
-				<col width="130">
+				<col width="150">
 				<col width="130">
 				<col width="130">
 				<col width="130">
@@ -363,7 +363,7 @@
 				<col width="130">
 				<col width="130">
 				<col width="130">
-				<col width="150">
+				<col width="160">
 				<col width="130">
 				<col width="130">
 				<thead>
