fix fields search

--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -99,13 +99,13 @@
 					<a class="tenvietnam" style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html">{{post.tenVietNam ? post.tenVietNam : 'Mẫu vật'}}</a>
 				</td>
 				<td>
-					{{post.soHieuBaoTangCS ? post.soHieuBaoTangCS : 'Chưa có'}}
+					{{post.soHieuBaoTangCS}}
 				</td>
 				<td>
-					{{post.soHieuBTTNVN ? post.soHieuBTTNVN : 'Chưa có'}}
+					{{post.soHieuBTTNVN}}
 				</td>
 				<td>
-					{{post.nguoiGiamDinh ? post.nguoiGiamDinh : 'Chưa có'}}
+					{{post.nguoiGiamDinh}}
 				</td>
 				<td>
 					{{post.nguoiThuMau ? post.nguoiThuMau : 'Chưa có'}}       
