--- a/app/views/templates/home.template.html
+++ b/app/views/templates/home.template.html
@@ -22,9 +22,11 @@
     }
 </style>
 
-<div id="header" class="jumbotron">
+<div id="header" class="jumbotron" style="height: 240px;">
     <div class="container">
-        <h1>Bộ Sưu Tập Mẫu Vật Quốc Gia Về Thiên Nhiên Việt Nam</h1>
+        <h2>Bộ Sưu Tập Mẫu Vật Quốc Gia</h2>
+         <h2>Về Thiên Nhiên Việt Nam</h2>
+         <!-- <div style="padding: 10px"></div> -->
     </div>
 </div>
 <div class="container content">
